--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "multer": "^1.4.5-lts.1",
     "node-imap": "^0.9.6",
     "nodemailer": "^6.9.16",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "twilio": "^5.4.0"
   }
 }
